--- a/packages/photo/package.json
+++ b/packages/photo/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@photo-touch/photo",
-  "version": "0.0.2-a0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "./dist/index",
   "module": "./dist/index.es.js",
   "types": "dist/index.d.ts",
   "author": "any86",
   "peerDependencies": {
-    "tslib": "^1.9.3",
-    "any-event":"^0.7.7"
+    "any-event": "^0.7.7",
+    "tslib": "^1.9.3"
   },
   "files": [
     "dist/*"
