--- a/packages/photo-touch/package.json
+++ b/packages/photo-touch/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "photo-touch",
-  "version": "0.0.3",
-  "description": "",
-  "main": "./dist/index",
-  "module": "./dist/index.es.js",
-  "types": "dist/index.d.ts",
-  "author": "any86",
-  "dependencies": {
-    "@photo-touch/photo": "^0.0.3",
-    "any-touch": "^0.7.7",
-    "tslib": "^1.9.3"
-  },
-  "files": [
-    "dist/*"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [],
-  "sideEffects": false,
-  "license": "ISC",
-  "gitHead": "8c4d4c4275332966a19678c01de5228f21d1394f"
+    "name": "photo-touch",
+    "version": "0.0.3",
+    "description": "",
+    "main": "./dist/index",
+    "module": "./dist/index.es.js",
+    "types": "dist/index.d.ts",
+    "author": "any86",
+    "dependencies": {
+        "@5a/css": "^0.0.9",
+        "@photo-touch/photo": "^0.0.3",
+        "any-touch": "^0.7.7",
+        "tslib": "^1.9.3"
+    },
+    "files": [
+        "dist/*"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
+    "keywords": [],
+    "sideEffects": false,
+    "license": "ISC",
+    "gitHead": "8c4d4c4275332966a19678c01de5228f21d1394f",
+    "devDependencies": {
+        "chalk": "^4.1.0",
+        "gh-pages": "^3.1.0",
+        "rollup-plugin-typescript2": "^0.27.2",
+        "shelljs": "^0.8.4"
+    }
 }
