--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "photo-touch-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   "dependencies": {
     "@5a/css": "^0.0.9",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.2",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
