--- a/packages/photo/package.json
+++ b/packages/photo/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "author": "any86",
   "dependencies": {
+    "@photo-touch/load-image": "^0.0.5",
     "any-event": "^0.7.8",
     "tslib": "^1.9.3"
   },
