--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@5a/css": "^0.0.9",
+    "changedpi": "^1.0.4",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
     "vue": "^3.0.0-0",
