--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
     "leancloud-storage": "^4.7.0",
+    "view-design": "^4.4.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
