--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "changedpi": "^1.0.4",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.6",
     "file-saver": "^2.0.2",
     "leancloud-storage": "^4.7.0",
     "view-design": "^4.4.0",
